k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deepfake
  labels:
    app.kubernetes.io/part-of: deepfake
