k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepfake-api
  namespace: deepfake
spec:
  replicas: 1
  selector:
    matchLabels: { app: deepfake-api }
  template:
    metadata:
      labels: { app: deepfake-api }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: api
          image: ghcr.io/sunny-debug/cs598:latest 
          imagePullPolicy: Always
          ports: [{ containerPort: 8000 }]
          readinessProbe:
            httpGet: { path: /healthz, port: 8000 }
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "5000m",    memory: "512Mi" }
