k8s/deployment-streamlit-realeyes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"deepfake-ui-v2","namespace":"deepfake"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"deepfake-ui-v2"}},"template":{"metadata":{"labels":{"app":"deepfake-ui-v2"}},"spec":{"containers":[{"args":["run","streamlit_app/app.py","--server.port","8501","--server.address","0.0.0.0","--server.headless","true"],"command":["python","-m","streamlit"],"env":[{"name":"API_BASE","value":"http://deepfake-api-svc.deep [...]
  creationTimestamp: "2025-10-20T05:49:30Z"
  generation: 5
  name: deepfake-ui-v2
  namespace: deepfake
  resourceVersion: "803416"
  uid: cbe128ad-1b34-4c40-8788-e447b03f6932
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: deepfake-ui-v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-10-29T00:36:00-05:00"
      creationTimestamp: null
      labels:
        app: deepfake-ui-v2
    spec:
      containers:
      - args:
        - run
        - streamlit_app/app.py
        - --server.port
        - "8501"
        - --server.address
        - 0.0.0.0
        - --server.headless
        - "true"
        command:
        - python
        - -m
        - streamlit
        image: ghcr.io/sunny-debug/cs598-ui:realeyes-20251020-1425
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8501
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: ui
        ports:
        - containerPort: 8501
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8501
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        workingDir: /app
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
