k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepfake-api-svc
  namespace: deepfake
spec:
  type: ClusterIP
  selector: { app: deepfake-api }
  ports:
    - name: http
      port: 80
      targetPort: 8000
