k8s/service-streamlit.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepfake-ui-svc
  namespace: deepfake
spec:
  type: ClusterIP
  selector:
    app: deepfake-ui
  ports:
    - port: 80
      targetPort: 8501
